tests/include_without_implictly_include_root/include_without_implictly_include_root.exp
Error -------------------------------------------------------------------------------------------------- baz/boz.js:1:19

Cannot assign `3` to `a` because number [1] is incompatible with string [2]. [incompatible-type]

   baz/boz.js:1:19
   1| const a: string = 3;
                        ^ [1]

References:
   baz/boz.js:1:10
   1| const a: string = 3;
               ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ foo.js:1:19

Cannot assign `3` to `a` because number [1] is incompatible with string [2]. [incompatible-type]

   foo.js:1:19
   1| const a: string = 3;
                        ^ [1]

References:
   foo.js:1:10
   1| const a: string = 3;
               ^^^^^^ [2]



Found 2 errors
